<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.details.DetailsActivity">

    <Spinner
        android:id="@+id/milkYieldSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="24dp" />

    <RadioGroup
        android:id="@+id/fodderAvailabilityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/highGreenRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/high_green" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/moderateGreenRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moderate_green" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lowGreenRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_green" />

    </RadioGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="24dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feed_recommendation"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/concentrateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/concentrate" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/greenFodderTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_fodder" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dryRoughageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dry_roughage" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:text="@string/details"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestFormButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:text="@string/request_form"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:text="@string/feedback"
            android:textAllCaps="true" />
    </LinearLayout>

</LinearLayout>